<resources>
    <string name="app_name">LTC</string>
    <string name="title_activity_main">LTC</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="js">JavaScript</string>
    <string name="py">Python</string>
    <string name="beginner">beginner</string>
    <string name="advanced">advanced</string>
    <string name="javascript_difficulty_select">JavaScript Difficulty Select</string>
    <string name="select_a_language">Select a language</string>
    <string name="python_difficulty_select">Python Difficulty Select</string>
    <string name="javascript_beginner_lessons">JavaScript Beginner Lessons</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="check_answer">Check</string>
    <string name="question">Question</string>
    <string name="choice_4">Choice 4</string>
    <string name="next">Next</string>
    <string name="button">Button</string>
    <string name="missing_word">Missing word</string>
    <string name="text">Text</string>
    <string name="fill_the_missing_word">Fill The Missing Word</string>
    <string name="google_logo">Google Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_your_knowledge">Test Your Knowledge</string>
    <string name="done">Done</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="choose_a_correct_answer">Choose A Correct Answer</string>
    <string name="sign_out">Sign Out</string>
    <string name="todo">TODO</string>
    <string name="coding_playground">Coding Playground</string>
    <string name="python">Python</string>
    <string name="hint">hint</string>
    <string name="textview">TextView</string>
    <string name="_1">1</string>
    <string name="want_to_track_your_progress">Want to track your progress?</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="learn_to_code">Learn To Code</string>
    <string name="welcome">Welcome</string>
    <string name="output">Output</string>
    <string name="x">X</string>
    <string name="back">Back</string>
    <string name="question_2">Question 2</string>
    <string name="choose_a_preferred_difficulty">Choose a preferred difficulty</string>
    <string name="jump_straight_into_coding">Jump straight into coding</string>
    <string name="question_1">Question 1</string>
</resources>